# lambdaz

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  setup.cfg
src/lambdaz/: __init__.py  aio.py  args.py  base.py  binary.py  call.py  cond.py  consts.py  unary.py  util.py  value.py
tests/: test_add.py  test_aio.py  test_args.py  test_bits.py  test_call.py  test_complex.py  test_conditions.py  test_contains.py  test_floordiv.py  test_getattr.py  test_getitem.py  test_kwargs.py  test_len.py  test_mod.py  test_mul.py  test_pow.py  test_sub.py  test_truediv.py  test_unary.py  test_value.py
