[metadata]
name = lambdaz
version = attr: lambdaz.__version__
description = DSL for lambda definition
long_description = file: README.md
long_description_content_type = text/markdown
author = A. Torsunov
url = https://github.com/gtors/lambdaz
platforms = Linux,Mac
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers

[options]
packages = find:
package_dir =
    =src
#install_requires=
python_requires = >=3.6

[options.extras_require]
dev =
    black==21.9b0
    darglint
    flake8
    flake8-blind-except
    flake8-bugbear
    flake8-comprehensions
    flake8-print
    isort
    mypy
    pre-commit
    pytest-asyncio~=0.14
    pytest-cov
    pytest~=6.2
    wemake-python-styleguide
tests =
    pytest~=6.2
    pytest-asyncio~=0.14

[options.packages.find]
where = src
exclude =
    tests

[coverage:run]
omit =
  # We test mypy plugins with `pytest-mypy-plugins`,
  # which does not work with coverage:
  lambdaz/contrib/mypy/*

[flake8]
format = wemake
show-source = True
doctests = False
enable-extensions = G
statistics = False

# darglint configuration:
# https://github.com/terrencepreilly/darglint
strictness = long
docstring-style = numpy

# Plugins:
accept-encodings = utf-8
max-complexity = 6
max-line-length = 80
radon-max-cc = 10
radon-no-assert = True
radon-show-closures = True

# wemake-python-styleguide
max-line-complexity = 16
i-control-code = False

exclude =
  # Trash and cache:
  .git
  __pycache__
  .venv
  .eggs
  *.egg
  temp
  # Bad code that I write to test things:
  ex.py

ignore =
  D100,
  D104,
  D401,
  W504,
  X100,
  WPS121,
  RST303,
  RST304,
  WPS204,
  DAR103,
  DAR203,

per-file-ignores =
  # Disable imports in `__init__.py`:
  /__init__.py: WPS226, WPS413
  # There are multiple assert's in tests:
  tests/*.py: S101, WPS226, WPS432, WPS436, WPS450
  # We need to write tests to our private class:
  tests/test_math_expression/*.py: S101, WPS432, WPS450


[tool:pytest]
# py.test options:
norecursedirs = temp *.egg .eggs dist build docs .tox .git __pycache__

# You will need to measure your tests speed with `-n auto` and without it,
# so you can see whether it gives you any performance gain, or just gives
# you an overhead. See `docs/template/development-process.rst`.
addopts =
  --cov=lambdaz
  --cov-report=term:skip-covered
  --cov-report=html
  --cov-report=xml
  --cov-branch
  --cov-fail-under=100


[isort]
# https://github.com/timothycrosley/isort/wiki/isort-Settings
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 79


[mypy]
allow_redefinition = False
check_untyped_defs = True
disallow_any_explicit = True
disallow_any_generics = True
# disallow_untyped_calls = True
ignore_errors = False
ignore_missing_imports = True
implicit_reexport = False
strict_optional = True
strict_equality = True
no_implicit_optional = True
local_partial_types = True
warn_no_return = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unreachable = True
